--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-demystified",
+  "name": "chat-room",
   "version": "1.0.0",
-  "description": "### Game Plan:   - Part 1:     - Understand what Webpack is, and why it is useful   - Part 2:     - Build a basic Webpack file from scratch   - Part 3:     - Realize that Webpack is like your organized but slightly finicky butler taking care of everything for you (as long as you give them the right instructions).",
+  "description": "Chat application",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -10,22 +10,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martensonbj/webpack-demystified.git"
+    "url": "https://github.com/swanie21/chat-room-1.0"
   },
-  "author": "",
+  "author": "Adam Bernard and Kirsten Swanson",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/martensonbj/webpack-demystified/issues"
+    "url": "https://github.com/swanie21/chat-room-1.0"
   },
-  "homepage": "https://github.com/martensonbj/webpack-demystified#readme",
+  "homepage": "https://github.com/swanie21/chat-room-1.0",
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "jquery": "^3.1.0",
     "mocha": "^3.0.2",
     "mocha-loader": "^0.7.1",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "wdio-mocha-framework": "^0.4.0",
+    "webdriverio": "^4.2.5",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
