--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "run": "webpack",
-    "test": "mocha"
+    "test": "mocha",
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,9 @@
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "wdio-dot-reporter": "0.0.6",
     "wdio-mocha-framework": "^0.4.0",
+    "wdio-selenium-standalone-service": "0.0.5",
     "webdriverio": "^4.2.5",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
