--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "run": "webpack",
-    "test": "mocha",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
