--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "run": "webpack",
     "test": "mocha",
     "feature": "wdio wdio.conf.js",
-    "sel": "java -jar selenium-server-standalone-2.53.1.jar"
+    "sel": "java -jar selenium-server-standalone-2.53.1.jar",
+    "build": "./node_modules/webpack/bin/webpack.js"
   },
   "repository": {
     "type": "git",
