--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "mocha",
     "feature": "wdio wdio.conf.js",
     "sel": "java -jar selenium-server-standalone-2.53.1.jar",
-    "build": "./node_modules/webpack/bin/webpack.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
