--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/swanie21/chat-room-1.0",
   "devDependencies": {
-    "babel-core": "^6.13.2",
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "chai": "^3.5.0",
@@ -33,6 +33,7 @@
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
+    "svg-url-loader": "^1.1.0",
     "wdio-dot-reporter": "0.0.6",
     "wdio-mocha-framework": "^0.4.0",
     "wdio-selenium-standalone-service": "0.0.5",
